--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,15 @@
                     <compilerArgument>-Xlint:-deprecation</compilerArgument>
                 </configuration>
             </plugin>
+            <!-- surefire test plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <useFile>false</useFile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
