--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.rubicon.core</groupId>
+            <artifactId>valkyrie</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
@@ -58,6 +63,18 @@
     </pluginRepositories>
 
     <repositories>
+        <repository>
+            <id>samtingleff-maven-snapshot-repo</id>
+            <url>https://github.com/samtingleff/maven-repo/raw/master/snapshots</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+            </snapshots>
+        </repository>
     </repositories>
 
     <!-- to push a new version:
