--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.rubicon.core</groupId>
             <artifactId>valkyrie</artifactId>
             <version>1.0-SNAPSHOT</version>
