--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.rubicon.core</groupId>
+            <groupId>com.rubicon.oss</groupId>
             <artifactId>valkyrie</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -81,10 +81,10 @@
     <repositories>
         <repository>
             <id>samtingleff-maven-snapshot-repo</id>
-            <url>https://github.com/samtingleff/maven-repo/raw/master/snapshots</url>
+            <url>https://raw.github.com/samtingleff/maven-repo/master/snapshots</url>
             <layout>default</layout>
             <releases>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </releases>
             <snapshots>
                 <enabled>true</enabled>
