--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.rubicon.core</groupId>
     <artifactId>mt-baker</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.2</version>
     <name>mt-baker</name>
     <url>http://maven.apache.org</url>
 
