--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.rubicon.oss</groupId>
+    <groupId>org.cookietrust</groupId>
     <artifactId>mt-baker</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.6</version>
+    <version>1.0.7</version>
     <name>mt-baker</name>
     <url>http://maven.apache.org</url>
 
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.1</version>
+            <version>1.1.1</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -73,21 +73,4 @@
         </pluginRepository>
     </pluginRepositories>
 
-    <!-- to push a new version:
-        mvn -DaltDeploymentRepository=snapshot-repo::default::file:/path/to/maven-repo/snapshots clean deploy
-        cd /path/to/maven-repo
-        git add *
-        git commit -m 'new release of mt-baker
-        git push origin master
-    -->
-    <distributionManagement>
-        <repository>
-            <id>samtingleff-repo</id>
-            <url>https://github.com/samtingleff/maven-repo/raw/master/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>samtingleff-snapshot-repo</id>
-            <url>https://github.com/samtingleff/maven-repo/raw/master/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
